--- a/trunk/project/code/Presentation/Nop.Web/Nop.Web.csproj
+++ b/trunk/project/code/Presentation/Nop.Web/Nop.Web.csproj
@@ -1010,6 +1010,7 @@
     <Content Include="Content\Roxy_Fileman\lang\fr.json" />
     <Content Include="Content\kendo\2014.1.318\images\kendoui.woff" />
     <Content Include="Content\kendo\2014.1.318\images\kendoui.ttf" />
+    <None Include="Properties\PublishProfiles\motobay-filesystem.pubxml" />
     <None Include="Properties\PublishProfiles\motobay.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\fineuploader\iframe.xss.response-4.2.2.js" />
